<resources>
    <!-- __________________________________ GENERAL STRINGS _____________________________________________ -->

    <string name="app_name">Card Game Hub</string>
    <string name="app_icon_name">CGH</string>
    <string name="go_fish_description">Go Fish!</string>
    <string name="speed_description">Speed</string>
    <string name="welcome">Welcome to \n Card Game Hub!</string>
    <string name="choose_game">Choose a game to play!</string>

    <string name="btn_start_game">Start Game</string>
    <string name="btn_settings">Settings</string>
    <string name="btn_instructions">How To Play</string>
    <string name="btn_difficulty">Change Difficulty</string>
    <string name="btn_rate">Rate Go Fish</string>
    <string name="btn_language">Change Language</string>
    <string name="btn_save">Save</string>
    <string name="rb_english">English</string>
    <string name="rb_french">French</string>
    <string name="txtLanguage">Language</string>

    <string name="suit_0">Spades</string>
    <string name="suit_1">Hearts</string>
    <string name="suit_2">Clubs</string>
    <string name="suit_3">Diamonds</string>

    <string name="rank_1">Ace</string>
    <string name="rank_2">Two</string>
    <string name="rank_3">Three</string>
    <string name="rank_4">Four</string>
    <string name="rank_5">Five</string>
    <string name="rank_6">Six</string>
    <string name="rank_7">Seven</string>
    <string name="rank_8">Eight</string>
    <string name="rank_9">Nine</string>
    <string name="rank_10">Ten</string>
    <string name="rank_11">Jack</string>
    <string name="rank_12">Queen</string>
    <string name="rank_13">King</string>
    <string name="rank_14">Ace</string>

    <string name="rank_1_question">Aces?</string>
    <string name="rank_2_question">Twos?</string>
    <string name="rank_3_question">Threes?</string>
    <string name="rank_4_question">Fours?</string>
    <string name="rank_5_question">Fives?</string>
    <string name="rank_6_question">Sixes?</string>
    <string name="rank_7_question">Sevens?</string>
    <string name="rank_8_question">Eights?</string>
    <string name="rank_9_question">Nines?</string>
    <string name="rank_10_question">Tens?</string>
    <string name="rank_11_question">Jacks?</string>
    <string name="rank_12_question">Queens?</string>
    <string name="rank_13_question">Kings?</string>
    <string name="rank_14_question">Aces?</string>

    <string name="cards_in_hand">Cards in Hand: %d</string>
    <string name="completed_pairs">Completed Pairs</string>
    <string name="cards_left_in_deck">Cards Left In Deck : %d</string>
    <string name="do_you_have">Ask: Do you \nhave any</string>
    <string name="do_you_have_rank">Do you have any %s?</string>
    <string name="match_found">Match Found!</string>
    <string name="ai_match_found_from_draw">The AI made a match with a Go Fish card!</string>
    <string name="match_found_from_draw">You made a match with a Go Fish card!</string>
    <string name="thinking">I\'m Thinking&#8230;</string>
    <string name="ai_turn">AI\'s Turn!</string>
    <string name="your_turn">Your Turn!</string>
    <string name="tap_card_to_ask">Tap a card below to ask for a pair!</string>
    <string name="you_started_pair">You started with %d pair(s)!</string>

    <string name="your_score">Your score: %d</string>
    <string name="ai_score">AI score: %d</string>


    <string name="you_won">Game Over!\nYou Win!</string>
    <string name="you_lost">Game Over!\nYou Lose.</string>
    <string name="play_again">Would you like to play again?</string>

    <string name="confirm_yes">Yes</string>
    <string name="confirm_no">No</string>


    <!-- ____________________________________ HOW TO PLAY STRINGS _________________________________________ -->

    <string name="rules_overview">Overview</string>
    <string name="rules_gameplay">Gameplay</string>
    <string name="rules_winning">Winning</string>
    <string name="rules_setup">Setup</string>
    <string name="rules_on_your_turn">On Your Turn</string>

    <string name="go_fish_overview">Go Fish is a game of chance, with a healthy dose of reasoning. Played with a single deck of cards, players take turns guessing a card that they think the other player may
    hold, and taking them for themselves if they guess correctly. Points are scored by collecting pairs of the same card value (e.g. an Ace of Hearts and an Ace of Clubs).</string>
    <string name="go_fish_setup">A player is randomly chosen to be the dealer. Starting with the player after them, each player is dealt seven (7) cards. \n\n</string>
    <string name="go_fish_gameplay">
        1.  The player after the dealer may ask a player if they have cards of a certain rank (e.g. \"Do you have any Aces?\").\n\n
        1a. If they don\'t, then the player who asked must draw the top card from the deck, and the turn passes.\n\n
        1b. If they do, then those cards are given to the asking player from the other player\'s hand. The asking player may ask for another rank.\n\n
        2.  After receiving cards, either from another player or from the deck, a player may search for pairs of cards within their hand. A pair is any two cards of the same rank, regardless of suit.
        If any pairs are found, they are removed from the game, and that player scores a point for each pair found.
    </string>
    <string name="go_fish_winning">A game is completed once there are no more cards left to draw, and one of the players has emptied their hand. The player with the most points wins.</string>

    <!-- _____________________________________ SETTINGS STRINGS __________________________________________ -->

    <string name="difficulty_select">Select Difficulty</string>
    <string name="difficulty_normal">Normal</string>
    <string name="difficulty_hard">Hard</string>
</resources>