<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/underwater"
        tools:context=".GoFishSettings">

    <TextView
            android:text="@string/btn_settings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="28dp" android:textSize="50sp" android:textColor="#FFFFFF"
            android:shadowColor="#000000" android:shadowDx="5" android:shadowDy="5" android:shadowRadius="3"
    />

    <Button
            android:text="@string/btn_difficulty"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="424dp" app:layout_constraintHorizontal_bias="0.496"
            android:id="@+id/btnDifficulty" android:textSize="24sp" app:layout_constraintBottom_toTopOf="@+id/btnRate"
            app:layout_constraintVertical_bias="1.0"/>
    <Button
            android:text="@string/btn_rate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btnRate" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.495" android:layout_marginBottom="76dp" android:textSize="24sp"/>


</androidx.constraintlayout.widget.ConstraintLayout>