<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                                   xmlns:tools="http://schemas.android.com/tools"
                                                   android:layout_width="match_parent"
                                                   android:layout_height="match_parent"
                                                   android:id="@+id/relativeLayout" android:background="#EE823B">

    <TextView
            android:text="@string/btn_difficulty"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView5" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="8dp" android:textSize="30sp" android:textColor="#FFFFFF"
            android:textStyle="bold" app:layout_constraintHorizontal_bias="0.497"/>
    <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView5"
            android:layout_marginTop="16dp" android:visibility="visible">
        <RadioButton
                android:text="@string/difficulty_normal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/radioButtonNormal" android:checked="true"
                android:textColor="#FFFFFF"
                android:buttonTint="#000000" android:textSize="24sp"/>
        <RadioButton
                android:text="@string/difficulty_hard"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/radioButtonHard" android:textColor="#FFFFFF"
                android:buttonTint="#000000" android:textSize="24sp"/>
    </RadioGroup>


</androidx.constraintlayout.widget.ConstraintLayout>