<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/go_fish_main_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/underwater"
    tools:context=".GoFish">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <HorizontalScrollView
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:ellipsize="marquee"
            android:scrollbars="none">

            <LinearLayout
                android:id="@+id/aiHand"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="horizontal">

            </LinearLayout>
        </HorizontalScrollView>

        <TextView
            android:id="@+id/aiCardsInHand"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/dark_translucent"
            android:gravity="start"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:text="@string/cards_in_hand"
            android:textColor="@color/colorBackground" />

        <TextView
            android:id="@+id/aiScore"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:textColor="@color/colorBackground"
            android:textSize="36sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:id="@+id/rankSelector"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:gravity="center"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/tap_card_to_ask"
                android:textAllCaps="false"
                android:textColor="@android:color/background_light"
                android:textSize="32sp"
                android:textStyle="bold" />

        </LinearLayout>

        <TextView
            android:id="@+id/humanScore"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:textColor="@color/colorBackground"
            android:textSize="36sp" />

        <TextView
            android:id="@+id/cards_left_in_deck"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="8dp"
            android:text="@string/cards_left_in_deck"
            android:textColor="@color/colorBackground"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/playerCardsInHand"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/dark_translucent"
            android:gravity="start"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:text="@string/cards_in_hand"
            android:textColor="@color/colorBackground" />

        <HorizontalScrollView
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:ellipsize="marquee"
            android:scrollbars="none">

            <LinearLayout
                android:id="@+id/playerHand"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="horizontal" />
        </HorizontalScrollView>

    </LinearLayout>

    <TextView
            android:id="@+id/centreText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/coiny"
            android:gravity="center"
            android:shadowColor="#FF000000"
            android:shadowDx="1.5"
            android:shadowDy="1.3"
            android:text="@string/go_fish_description"
            android:textColor="@color/fishOrange"
            android:textSize="48sp"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintVertical_bias="0.45"/>

    <TextView
        android:id="@+id/textViewThinking"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/thinking"
        android:textSize="36sp"
        android:textStyle="bold"
        android:visibility="invisible"
        android:textColor="@color/fishOrange"
        app:layout_constraintBottom_toBottomOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.26999998"
        app:layout_constraintHorizontal_bias="0.4"/>
    <Button
            android:text="@string/confirm_yes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/yesBtn"
            android:background="@drawable/button_rounded"
            android:textColor="@color/colorBackground"
            android:visibility="gone"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="@+id/linearLayout"
            app:layout_constraintHorizontal_bias="0.2"
            app:layout_constraintVertical_bias="0.73"/>
    <Button
            android:text="@string/confirm_no"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/noBtn"
            android:background="@drawable/button_rounded"
            android:textColor="@color/colorBackground"
            android:visibility="gone"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="@+id/linearLayout"
            app:layout_constraintHorizontal_bias="0.80"
            app:layout_constraintVertical_bias="0.73"/>

</androidx.constraintlayout.widget.ConstraintLayout>